implemented cursor and hover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img style="border-radius: 15px;" src="assets/images/illustration-article.svg" alt="">
     <h4>Learning</h4>
     <p>Published 21 Dec 2023</p>
-    <h3>HTML & CSS foundations</h3>
+    <h3 class="sub">HTML & CSS foundations</h3>
     <p style="color: grey;">These languages are the backbone of every website, defining 
       structure, content, and presentation.
     </p>
